sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:9: error: not found: value I
    while (plusPetit(k+1,k) && I>0) {
                               ^